import { Injectable, Logger } from '@nestjs/common';
import { ProductClient } from './product.client';
import { ProductSyncRequestDto } from './dtos/product-sync-request.dto';
import { ProductSyncResponseDto } from './dtos/product-sync-response.dto';
import { ProductConflictResolutionRequestDto } from './dtos/product-conflict-resolution-request.dto';
import { ProductConflictResolutionResponseDto } from './dtos/product-conflict-resolution-response.dto';
import { CoreProductDto } from './dtos/core-product.dto';

// Conceptual: Define conflict resolution strategies enum/type
enum ConflictResolutionStrategy {
  PRIORITIZE_AD_MANAGER = 'PRIORITIZE_AD_MANAGER',
  PRIORITIZE_CORE_PLATFORM = 'PRIORITIZE_CORE_PLATFORM',
  MANUAL_REVIEW_NOTIFICATION = 'MANUAL_REVIEW_NOTIFICATION',
  USE_CORE_VALUE = 'USE_CORE_VALUE', // For resolveConflict RPC
  USE_AD_MANAGER_VALUE = 'USE_AD_MANAGER_VALUE', // For resolveConflict RPC
}

@Injectable()
export class ProductIntegrationService {
  private readonly logger = new Logger(ProductIntegrationService.name);

  constructor(private readonly productClient: ProductClient) {}

  async synchronizeProducts(
    request: ProductSyncRequestDto,
  ): Promise<ProductSyncResponseDto> {
    this.logger.log(
      `Starting product synchronization for merchant: ${request.merchantId}, forceFullSync: ${request.forceFullSync}`,
    );

    let productsFromCorePlatform: CoreProductDto[] = [];
    let conflictsDetected = 0;
    let productsSynced = 0; // Or productsProcessed

    // Conceptual: Fetch lastSyncTimestamp for the merchantId
    // This would typically come from a persistent store or another service.
    // For this example, we'll assume it's null if not forceFullSync and not provided.
    const lastSyncTimestamp: Date | undefined = undefined; // Placeholder

    try {
      if (request.forceFullSync || !lastSyncTimestamp) {
        this.logger.log(
          `Performing full product sync for merchant: ${request.merchantId}`,
        );
        productsFromCorePlatform = await this.productClient.fetchAllProducts();
      } else {
        this.logger.log(
          `Performing incremental product sync for merchant: ${request.merchantId} since ${lastSyncTimestamp}`,
        );
        productsFromCorePlatform =
          await this.productClient.fetchAllProducts(lastSyncTimestamp);
      }

      this.logger.log(
        `Fetched ${productsFromCorePlatform.length} products from [PlatformName] for merchant: ${request.merchantId}`,
      );

      for (const coreProduct of productsFromCorePlatform) {
        // Conceptual: Check for conflicts with Ad Manager overrides
        // This requires querying another Ad Manager service or a local cache of override metadata.
        const adManagerOverrideExists = false; // Placeholder
        const isConflict = adManagerOverrideExists && coreProduct.lastUpdatedAt > (/* Ad Manager override timestamp */ new Date(0)); // Placeholder logic

        if (isConflict) {
          conflictsDetected++;
          this.logger.warn(
            `Conflict detected for product ${coreProduct.id} for merchant ${request.merchantId}.`,
          );

          // Conceptual: Apply merchant's configured conflict resolution strategy (REQ-CPSI-002)
          const merchantStrategy: ConflictResolutionStrategy = ConflictResolutionStrategy.MANUAL_REVIEW_NOTIFICATION; // Placeholder

          switch (merchantStrategy) {
            case ConflictResolutionStrategy.PRIORITIZE_AD_MANAGER:
              this.logger.log(
                `Conflict Resolution: Prioritizing Ad Manager for product ${coreProduct.id}. Core data ignored.`,
              );
              // Do nothing with core data for this product
              break;
            case ConflictResolutionStrategy.PRIORITIZE_CORE_PLATFORM:
              this.logger.log(
                `Conflict Resolution: Prioritizing [PlatformName] for product ${coreProduct.id}. Ad Manager override may be lost/flagged.`,
              );
              // Conceptual: Emit CoreProductUpdatedEvent for Ad Manager's ProductCatalogService
              this.logger.log(
                `Event Emission (Conceptual): CoreProductUpdatedEvent for product ${coreProduct.id}`,
              );
              productsSynced++;
              break;
            case ConflictResolutionStrategy.MANUAL_REVIEW_NOTIFICATION:
              this.logger.log(
                `Conflict Resolution: Flagging product ${coreProduct.id} for manual review.`,
              );
              // Conceptual: Emit ProductConflictDetectedEvent or send notification
              this.logger.log(
                `Event Emission (Conceptual): ProductConflictDetectedEvent for product ${coreProduct.id}`,
              );
              break;
            default:
              this.logger.warn(
                `Unknown conflict resolution strategy for product ${coreProduct.id}`,
              );
          }
        } else {
          // No conflict, or conflict resolved by prioritizing core platform (implicitly handled if strategy led here)
          // Conceptual: Emit CoreProductUpdatedEvent for Ad Manager's ProductCatalogService
          this.logger.log(
            `Event Emission (Conceptual): CoreProductUpdatedEvent for product ${coreProduct.id}`,
          );
          productsSynced++;
        }
      }

      // Conceptual: Update lastSyncTimestamp for the merchant
      this.logger.log(
        `Conceptual: Updated lastSyncTimestamp for merchant ${request.merchantId}.`,
      );

      return {
        status: 'Synchronization completed.',
        productsSynced,
        conflictsDetected,
        // productsProcessed: productsFromCorePlatform.length, // Alternative metric
      };
    } catch (error)
    {
      this.logger.error(
        `Error during product synchronization for merchant ${request.merchantId}: ${error.message}`,
        error.stack,
      );
      // Specific error handling and mapping to gRPC status would happen in controller
      throw error;
    }
  }

  async resolveConflict(
    request: ProductConflictResolutionRequestDto,
  ): Promise<ProductConflictResolutionResponseDto> {
    this.logger.log(
      `Attempting to resolve product conflict for merchant: ${request.merchantId}, product: ${request.productId}, strategy: ${request.resolutionStrategy}`,
    );

    // This method is likely called by another Ad Manager service after a merchant makes a decision.
    try {
      const strategy = request.resolutionStrategy as ConflictResolutionStrategy; // Assuming strategy comes as string matching enum

      switch (strategy) {
        case ConflictResolutionStrategy.USE_CORE_VALUE:
          // Conceptual: Emit CoreProductUpdatedEvent with core platform data for the product.
          // This would involve fetching the latest core platform data for request.productId again if not passed in request.
          this.logger.log(
            `Event Emission (Conceptual): CoreProductUpdatedEvent for product ${request.productId} using [PlatformName] value.`,
          );
          break;
        case ConflictResolutionStrategy.USE_AD_MANAGER_VALUE:
          // Conceptual: Signal that the Ad Manager override should be maintained.
          // This might be a no-op in this service if it only syncs *from* core.
          // Or, it could trigger an event for Ad Manager to re-affirm its override.
          this.logger.log(
            `Action (Conceptual): Ad Manager override maintained for product ${request.productId}.`,
          );
          break;
        default:
          this.logger.warn(
            `Invalid or unhandled resolution strategy: ${request.resolutionStrategy} for product ${request.productId}`,
          );
          return {
            productId: request.productId,
            resolutionStatus: 'FAILED',
            message: `Invalid resolution strategy: ${request.resolutionStrategy}`,
          };
      }

      return {
        productId: request.productId,
        resolutionStatus: 'RESOLVED', // Or 'ACTION_TAKEN'
        message: `Conflict resolution action processed with strategy: ${request.resolutionStrategy}.`,
      };
    } catch (error) {
      this.logger.error(
        `Error resolving product conflict for product ${request.productId}: ${error.message}`,
        error.stack,
      );
      throw error;
    }
  }
}